<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hotels" />
        <item
            android:id="@+id/nav_shops"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shops" />
        <item
            android:id="@+id/nav_cafes"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/cafes_restaurants" />
        <item
            android:id="@+id/nav_pharmacy"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/pharmacies" />
        <item
            android:id="@+id/nav_tours"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/other" />

    </group>

    <item android:title="@string/social_actions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/rate" />

        </menu>
    </item>

</menu>
